Fix for wrong colour on Project nodes h3 header

--- a/amani/themes/amani_zen/sass/theme/_page_specific.scss
+++ b/amani/themes/amani_zen/sass/theme/_page_specific.scss
@@ -1731,6 +1731,8 @@
 							text-transform:uppercase;
 							margin-top:40px;
 							margin-bottom:10px;
+							letter-spacing:1px;
+							color:$text-black;
 						}
 					}
 					
